# advent_of_code_fast

./: .gitignore  Cargo.toml  README.md  out.txt
.github/workflows/: codspeed.yml
benches/: day1.rs
src/: day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs
