[package]
name = "advent_of_code_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "day1"
harness = false
